force-app/main/default/objects/ssot__Team__dlm/fields/ssot__DepartmentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DepartmentId__c</fullName>
    <label>Department</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DepartmentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>