force-app/main/default/objects/ssot__Team__dlm/fields/ssot__TeamType__c.field-meta.xml
<CustomField>
    <fullName>ssot__TeamType__c</fullName>
    <label>Team Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TeamType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>